# PostArchiverEditor

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
audits/: api.md  bugs.md  features.md  summary.md  ux.md
frontend/: README.md  eslint.config.ts  index.html  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  api.ts  category.ts  main.ts  router.ts  style.css  types.ts  utils.ts
frontend/src/components/: FileMetaList.vue  MiniPostList.vue  Settings.vue
frontend/src/components/aside/: Aside.vue  AsideHeader.vue  AsideList.vue  AsideTabs.vue  DrawerAside.vue
frontend/src/components/author/: AuthorsInput.vue
frontend/src/components/collection/: CollectionsInput.vue
frontend/src/components/input/: DatePicker.vue  DateTimeInput.vue  ModifyButtons.vue  RelationsInput.vue  UrlInput.vue
frontend/src/components/inputs/: ActionButtons.vue  CategoryGroupInput.vue  CategoryInput.vue  ContentInput.vue  DateTimeInput.vue  FileInput.vue  FileMetaInput.vue  FileMetaList.vue  FileMetaSelect.vue  ImageInput.vue  JsonEditor.vue  MimeInput.vue  SaveDiscardButtons.vue
frontend/src/components/layout/: Aside.vue  Header.vue  Main.vue
frontend/src/components/main/: Author.vue  FileMeta.vue  (+5 more)
frontend/src/lib/: utils.ts
frontend/src/pages/: authors.vue  collections.vue  index.vue  platforms.vue  posts.vue  tags.vue
src/: config.rs  frontend.rs  main.rs  resource.rs
src/api/: file.rs  mod.rs  post.rs  relation.rs  utils.rs
src/api/category/: author.rs  collection.rs  file_meta.rs  mod.rs  platform.rs  post.rs  tag.rs
(+22 files in other folders)
